--- a/docker-rootless/docker-rootless.service
+++ b/docker-rootless/docker-rootless.service
@@ -2,9 +2,11 @@
 Description=Docker daemon (rootless, user 1000)
 
 [Service]
-Environment="XDG_RUNTIME_DIR=/run/user/1000"
-ExecStart=/usr/bin/dockerd-rootless.sh --experimental --storage-driver fuse-overlayfs
 User=1000
+Environment="XDG_RUNTIME_DIR=/tmp/docker-1000"
+Environment=DOCKERD_ROOTLESS_ROOTLESSKIT_MTU=16368
+ExecStartPre=mkdir -p -m 700 /tmp/docker-1000
+ExecStart=/usr/bin/dockerd-rootless.sh --experimental --storage-driver fuse-overlayfs
 
 [Install]
 WantedBy=multi-user.target
